jena-shex/src/test/files/spec/negativeSyntax/prefix-no-PNAME_NS.shex
# PREFIX without PNAME_NS .
# source: turtle-syntax-bad-prefix-04.ttl
PREFIX <http://a.example/>
